# sgan

./: CMakeLists.txt  package.xml  requirements.txt  setup.py
scripts/: evaluate_model.py  predict_tracks.py
src/sgan/: models.py
